# bucket-brigade

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENT_PROMPT.md  API.md  CLASS_DESIGN.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  GAME_DESCRIPTION.md  GAME_DYNAMICS.md  LOOM_AGENTS.md  MCP_SETUP.md  Makefile  OPTIMIZATION_NOTES.md  POPULATION_TRAINING.md  RANKING_METHODOLOGY.md  RANKING_SYSTEM.md  README.md  RESTART_INSTRUCTIONS.md  SANDBOX_GUIDE.md  SCENARIO_BRAINSTORM.md  SCENARIO_RESEARCH.md  SCRIPTED_AGENTS.md  STORY.md  STORY_DESCRIPTION.md  STYLE_GUIDE.md  TEST_PLAN.md  TODO.md  TRAINING_GUIDE.md  VISUALIZER_DESIGN.md  VOCABULARY.md  nash_analysis_output.txt  nash_analysis_parallel.txt  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  resources  (+4 more)
.anvil/: CLAUDE.md  install-metadata.json  pyproject.toml
.claude/: mcp_settings.json  settings.json  settings.local.json
.github/: labels.yml
.loom/: CLAUDE.md  install-metadata.json
bucket-brigade-core/: Cargo.toml  README.md  build.sh  pyproject.toml  setup.py
bucket-brigade-core/bucket_brigade_core/: __init__.py
bucket-brigade-core/bucket_brigade_core/bucket_brigade_core/: __init__.py  libbucket_brigade_core.dylib
bucket-brigade-core/proptest-regressions/engine/: tests.txt
bucket-brigade-core/src/: engine.rs  lib.rs  python.rs  rng.rs  scenarios.rs  wasm.rs
bucket-brigade-core/src/agents/: heuristic.rs  mod.rs
bucket-brigade-core/src/engine/: core.rs  mod.rs  observation.rs  phases.rs  rewards.rs  tests.rs  types.rs
bucket_brigade/: __init__.py
definitions/: archetypes.json  scenarios.json
docs/: AGENT_ROSTER.md  ARCHETYPES_AND_SCENARIOS_AUDIT.md  CLOUDFLARE_PAGES_SETUP.md  DATABASE_SETUP.md  ENV.md  GLOSSARY.md  HYPERPARAMETER_TUNING.md  IMPLEMENTATION_CHECKLIST.md  MCP_SETUP.md  NASH_BENCHMARKS.md  PAPER_RESULTS.md  PARITY.md  PERFORMANCE.md  PHASE_2_RESEARCH_AGENDA.md  POPULATION_TRAINING.md  RANKING_METHODOLOGY.md  README.md  REFACTORING_CANDIDATES.md  RELEASE.md  REMOTE_TRAINING.md  REMOVED_SCENARIOS_ARCHIVE.md  SIMPLIFICATION_PLAN.md  SIMPLIFICATION_SUMMARY.md  SIMPLIFIED_ARCHITECTURE.md  TEST_COVERAGE_ANALYSIS.md  TRAINING_GUIDE.md  VECTORIZED_TRAINING_FIX.md  WEB_UI_MOCKUP.md  agent_metadata.json  background_closed_vs_open_world.md  curriculum_learning.md  game_description.md  game_mechanics.md  ppo-help-brief.md  roadmap_phased_plan.md  technical_marl_review.md  vision_future_directions.md
experiments/: EVOLUTION_ANALYSIS_GUIDE.md  EVOLUTION_RESEARCH.md  EVOLUTION_TIMING_ANALYSIS.md  INTENSIVE_EVOLUTION.md  INTENSIVE_EVOLUTION_RESULTS.md  ONGOING_SPECIALIST_V3.md  PROGRESS.md  RANKING_FINAL_RESULTS.md  RANKING_IMPLEMENTATION_PLAN.md  RANKING_PHASE1_RESULTS.md  RANKING_PHASE2_READY.md  REMOTE_EXECUTION.md  RESEARCH_PROGRESS.md  RESEARCH_SUMMARY.md  V3_FITNESS_BUG_ANALYSIS.md  V4_EVOLUTION_PLAN.md  V4_POST_COMPLETION_GUIDE.md  V4_STATUS.md  nash_analysis_summary.md
mcp-server/: README.md  package-lock.json  package.json
models/: bucket_brigade_policy.pt  puffer_gpu_policy.pt  simple_policy.pt
paper/: _project.md
replays/: test_game.json
research_notebook/: 2025-11-07_game_mechanics_fix_and_v7_completion.md  2025-11-08_phase_2_5_analysis_plan.md  2025-11-08_v7_evolution_and_nash_equilibrium.md  2026-05-13_p3_specialization_plan.md  2026-05-14_p3_specialization_results.md  2026-05-15_h1_rollout_rewards.md  2026-05-15_h2_reward_attribution_audit.md  2026-05-15_h3_random_baseline.md  2026-05-15_issue197_rebalance_smoke.md  2026-05-15_issue199_minimal_specialization.md  2026-05-15_p3_conditioner_decision.md  2026-05-15_p3_plateau_ablation.md  2026-05-16_issue220_obsfix_validation.md  2026-05-16_issue221_positional_default.md  2026-05-16_issue231_mappo_phase2.md  2026-05-16_issue239_post236_revalidation.md  2026-05-17_issue260_curriculum_verdict.md  2026-05-17_issue261_action_shaping_verdict.md  2026-05-17_issue271_best_of_n_verdict.md  2026-05-17_issue272_bc_fit_only_verdict.md  2026-05-17_lit_review.md  2026-05-17_thesis_misaligned_gradients.md  README.md
scripts/: README.md  analyze_nash_equilibrium.py  analyze_rankings.py  analyze_summaries.py  benchmark_parallel.py  build_research_content.py  cf-pages-build.sh  collect_evolution_results.sh  compare_teams.py  evaluate_policy.py  evaluate_simple.py  evaluate_transfer.sh  evolve_agents.py  evolve_remote.py  evolve_scenario_expert.py  evolve_v6.py  evolve_v6_simple.py  evolve_v7.py  export_definitions.py  generate_python.py  generate_typescript.py  launch_evolution_tmux.sh  launch_overnight_experiments.sh  launch_parallel_evolution.sh  launch_remote_training.sh  launch_specialists_overnight.sh  list_experiments.py  monitor_evolution.sh  run_batch.py  run_evolution_parallel.sh  run_one_game.py  run_remote_evolution.sh  sandbox.sh  setup-mcp-env.sh  setup_and_launch_v7.sh  submit_agent.py  test_agents.py  test_nash_minimal.py  test_nash_ultra_minimal.py  test_parallel_quick.py  (+12 more)
test_ranking/: batch_results.csv  ranking_results.json
tests/: conftest.py  test_agent_loader.py  test_agent_registry.py  test_agents.py  test_api.py  test_baselines.py  test_baselines_constants.py  test_bc_fit_class_balanced.py  test_bc_fit_only_hidden_size.py  test_bc_fit_transformer.py  test_bc_init.py  test_beta_inertness.py  test_beta_residuals.py  test_ci_red_proof_issue484.py  test_cmi_validation_issue176.py  test_code_generation.py  test_compute_nash_df_precheck.py  test_compute_nash_seed_profiles.py  test_conditional_entropy.py  test_conftest_staleness.py  test_continuous_extinguish.py  test_crn_deviation_check.py  test_entropy_vs_trainability.py  test_env_health_diagnostics.py  test_env_registry.py  test_environment.py  test_equilibrium.py  test_evolution.py  test_extract_do_trace.py  test_game_simulator.py  test_heterogeneous_oracle_checkpoint.py  test_heterogeneous_oracle_pool.py  test_heuristic_signaling.py  test_improvability_oracle.py  test_info_theory.py  test_integration.py  test_issue199_baselines_sampler.py  test_issue285_bc_highlambda.py  test_joint_trainer.py  test_kstar_vs_trainability.py  (+39 more)
web/: .eslintrc.cjs  (+10 more)
(+5748 files in other folders)
