[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bucket-brigade"
version = "0.1.0"
description = "Multi-agent cooperation game and ranking engine"
authors = [{name = "rjwalters", email = "rjwalters@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.9,<3.14"  # PyO3 0.22.6 (bucket-brigade-core) requires Python <=3.13
dependencies = [
"numpy>=1.26.0",
"pandas>=2.0.0",
"scikit-learn>=1.0.0",
"scipy>=1.7.0",
"typer>=0.4.0",
"rich>=10.0.0",
"tqdm>=4.64.0",
"hatchling",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.1",
    "mypy>=0.900",
    "pre-commit>=2.15.0",
    "httpx>=0.24.0",
]
rl = [
    "pufferlib>=3.0.0,<4.0.0",
    "torch>=2.0.0",
    "gymnasium>=0.28.0",
    "tensorboard>=2.13.0",
    "psutil>=5.9.0",
    "optuna>=3.0.0",
    "plotly>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bucket_brigade*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]  # Skip assert (used in tests)
