[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bucket-brigade"
version = "0.1.0"
description = "Multi-agent cooperation game and ranking engine"
authors = [{name = "rjwalters", email = "rjwalters@users.noreply.github.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9,<3.14"  # PyO3 0.22.6 (bucket-brigade-core) requires Python <=3.13
keywords = ["multi-agent", "reinforcement-learning", "game-theory", "cooperation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core dependencies — the minimum to `import bucket_brigade`, call
# `make()` / `make_vec()`, run hand-coded baselines, and pull frozen
# baseline artifacts from a local release directory. Heavy ML deps
# (torch, optuna, tensorboard, ...) live under the `rl` extra; research
# tooling (pandas, scikit-learn, plotly) under the `research` extra;
# HuggingFace integration under the `huggingface` extra. See
# `docs/RELEASE.md` for the distribution rationale (issue #373).
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.7.0",
    "gymnasium>=0.28.0",
    "typer>=0.4.0",
    "rich>=10.0.0",
    "tqdm>=4.64.0",
    # Compiled Rust speedup (PyO3). Shipped as per-platform wheels built by
    # ``.github/workflows/wheels.yml`` (issue #404). Listing it as a hard dep
    # means ``pip install bucket-brigade`` pulls a working Rust ext on any
    # supported platform — no separate ``cd bucket-brigade-core && pip
    # install .`` step required. End users without a matching wheel (e.g.
    # exotic arch) need a Rust toolchain to compile from sdist; in code
    # paths that don't hard-depend on the ``.so`` we still degrade
    # gracefully to a pure-Python fallback.
    "bucket-brigade-core>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/rjwalters/bucket-brigade"
Documentation = "https://github.com/rjwalters/bucket-brigade/tree/main/docs"
Repository = "https://github.com/rjwalters/bucket-brigade"
Issues = "https://github.com/rjwalters/bucket-brigade/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.1",
    "mypy>=0.900",
    "pre-commit>=2.15.0",
    "httpx>=0.24.0",
]
rl = [
    "torch>=2.0.0",
    "tensorboard>=2.13.0",
    "psutil>=5.9.0",
    "optuna>=3.0.0",
    "plotly>=5.0.0",
]
# Tabular analysis tooling used by experiments/ and research_notebook/.
# Not required to run the env or load frozen baselines.
research = [
    "pandas>=2.0.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
]
# Optional integration for mirroring frozen baselines to HuggingFace
# (see bucket_brigade/baselines/release/hub.py). Without this extra,
# only the local-file path of the loader works; HF download/upload
# raises ImportError with a hint pointing back here.
huggingface = [
    "huggingface_hub>=0.20.0",
]
# Convenience umbrella: everything except `dev`. Useful for one-shot
# `pip install bucket-brigade[all]` on a research workstation.
all = [
    "bucket-brigade[rl,research,huggingface]",
]

# uv workspace: lets ``uv sync`` / ``uv run`` resolve the
# ``bucket-brigade-core`` runtime dep from the local ``bucket-brigade-core/``
# directory instead of looking it up on PyPI (where it is not yet
# published). Released wheels (built by .github/workflows/wheels.yml) do
# not consult this section — it only affects ``uv``'s in-repo resolution.
[tool.uv.workspace]
members = ["bucket-brigade-core"]

[tool.uv.sources]
bucket-brigade-core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["bucket_brigade"]

[tool.hatch.build.targets.sdist]
include = [
    "bucket_brigade",
    "README.md",
    "LICENSE",
    "docs/RELEASE.md",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bucket_brigade*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "research: marks tests validating research findings (deselect with '-m \"not research\"')",
    "torch_required: marks tests requiring torch/RL dependencies",
    "requires_rust: marks tests that require the bucket-brigade-core Rust extension to be built and up-to-date (run bucket-brigade-core/build.sh; set BUCKET_BRIGADE_ALLOW_MISSING_RUST=1 to skip when missing, or BUCKET_BRIGADE_ALLOW_STALE_RUST=1 to skip the staleness check)",
]
addopts = "--strict-markers"

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]  # Skip assert (used in tests)
