[package]
name = "bucket-brigade-core"
version = "0.1.0"
edition = "2021"
description = "Core game engine for Bucket Brigade multi-agent cooperation simulation"
license = "MIT"

[dependencies]
rand = "0.8"
rand_pcg = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.11", features = ["macros"] }

[features]
default = []
wasm = ["wasm-bindgen"]
python = ["pyo3"]

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dependencies.pyo3]
version = "0.22"
optional = true
features = ["extension-module"]

[dependencies.numpy]
version = "0.22"
optional = true

[dev-dependencies]
proptest = "1.0"

[lib]
name = "bucket_brigade_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
