[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-rust>=1.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bucket-brigade-core"
version = "0.1.0"
description = "Rust core for Bucket Brigade multi-agent cooperation simulation"
readme = "README.md"
requires-python = ">=3.9,<3.14"  # PyO3 0.22.6 requires Python <=3.13
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools]
packages = ["bucket_brigade_core"]

[tool.setuptools-rust]
features = ["python"]
