[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "bucket-brigade-core"
version = "0.1.0"
description = "Rust core for Bucket Brigade multi-agent cooperation simulation"
readme = "README.md"
requires-python = ">=3.9,<3.14"  # PyO3 0.22.6 requires Python <=3.13
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/rjwalters/bucket-brigade"
Repository = "https://github.com/rjwalters/bucket-brigade"
Issues = "https://github.com/rjwalters/bucket-brigade/issues"

# Maturin configuration (issue #404).
#
# We use the mixed Python/Rust layout: the Python package source lives under
# ``bucket_brigade_core/`` and the compiled Rust extension is built as a
# submodule ``bucket_brigade_core.bucket_brigade_core``. The
# ``python-source`` key tells maturin where the Python source tree lives;
# ``module-name`` is the dotted name of the compiled module within the
# package.
#
# ``features = ["python"]`` enables the PyO3 bindings (the crate defaults to
# no pyo3 features so the same source tree can also be compiled as a
# pure-Rust library or to wasm).
#
# ``strip = true`` shrinks release wheels.
[tool.maturin]
python-source = "."
module-name = "bucket_brigade_core.bucket_brigade_core"
features = ["python"]
strip = true
